Add UltimateShooterCharacter class

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=ADC98EC04FACF69288113E8A1BB0DC2D
+CopyrightNotice=Evgenii Esaulenko, Ultimate Shooter, 2024
+
